Fix unscrollable menu bar on mobile navigations

--- a/frontend/src/styles/components-styles/Navbar.css
+++ b/frontend/src/styles/components-styles/Navbar.css
@@ -59,6 +59,8 @@
     text-align: center;
     background-color: white;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.3);
+    height: 80vh;
     width: 50%;
     z-index: 1;
+    overflow-y: scroll;
 }
